--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "bootstrap": "^4.3.1",
         "core-js": "^2.5.4",
         "cors": "^2.8.5",
+        "express": "^4.16.4",
         "font-awesome": "^4.7.0",
         "mongoose": "^5.5.7",
         "nodemon": "^1.19.0",
